Feature/moving array logic to seperate parser (#5)
* adding first objects to parse an array

* letting array logic handle by JsonArrayParser, introduced a bug in nested objects (WIP)

* fixing a bug introduced in my last commit regarding handling nested objects

* cleaning up

---------

Co-authored-by: Laurens van der Kooi <laurens.van.der.kooi@ordina.nl>