@@ -2,7 +2,6 @@ package nl.kooi.jsonparser.parser;
 
 import nl.kooi.jsonparser.json.JsonNode;
 import nl.kooi.jsonparser.json.JsonObject;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
@@ -12,18 +11,18 @@ import java.util.List;
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
 
 
-class JsonParserTest {
+class JsonObjectParserTest {
 
     @Test
     void onlyBraces() {
-        assertThat(JsonParser.parse("{}"))
+        assertThat(JsonObjectParser.parse("{}"))
                 .isNotNull()
                 .isEqualTo(new JsonObject(null));
     }
 
     @Test
     void oneStringField() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "name": "Laurens"
                 }""");
@@ -36,7 +35,7 @@ class JsonParserTest {
 
     @Test
     void oneStringFieldWithTokenCharacters() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                    "name": "{[,true false:]}"
                 }""");
@@ -49,7 +48,7 @@ class JsonParserTest {
 
     @Test
     void oneNumberField() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "weight": 79.85
                 }""");
@@ -62,7 +61,7 @@ class JsonParserTest {
 
     @Test
     void oneBooleanField() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "married": false
                 }""");
@@ -75,7 +74,7 @@ class JsonParserTest {
 
     @Test
     void twoStringFields() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "name": "Laurens",
                   "sign": "Taurus"
@@ -90,8 +89,118 @@ class JsonParserTest {
     }
 
     @Test
+    void fourFieldsOfDifferentTypes() {
+        var result = JsonObjectParser.parse("""
+                {
+                  "name": "Laurens",
+                  "age": 36,
+                  "children": ["Anthony", "Marvin"],
+                  "married": true
+                }""");
+        assertThat(result).isNotNull();
+        assertThat(result.jsonNodes().length).isEqualTo(4);
+        assertThat(result.jsonNodes()[0].identifier()).isEqualTo("name");
+        assertThat(result.jsonNodes()[0].content()).isEqualTo("Laurens");
+        assertThat(result.jsonNodes()[1].identifier()).isEqualTo("age");
+        assertThat(result.jsonNodes()[1].content()).isEqualTo(36);
+        assertThat(result.jsonNodes()[2].identifier()).isEqualTo("children");
+        assertThat(result.jsonNodes()[2].content()).isEqualTo(List.of("Anthony", "Marvin"));
+        assertThat(result.jsonNodes()[3].identifier()).isEqualTo("married");
+        assertThat(result.jsonNodes()[3].content()).isEqualTo(true);
+    }
+
+    @Test
+    void simpleJsonWith1NestedObject() {
+        var result = JsonObjectParser.parse("""
+                {
+                  "person": {
+                    "name": "Laurens",
+                    "age": 36
+                  }
+                }""");
+
+        assertThat(result).isNotNull();
+        assertThat(result.jsonNodes().length).isEqualTo(1);
+        assertThat(result.jsonNodes()[0].identifier()).isEqualTo("person");
+        assertThat(result.jsonNodes()[0].content()).isInstanceOf(JsonObject.class);
+
+        var nestedObject = (JsonObject) result.jsonNodes()[0].content();
+        assertThat(nestedObject.jsonNodes()[0].identifier()).isEqualTo("name");
+        assertThat(nestedObject.jsonNodes()[0].content()).isEqualTo("Laurens");
+        assertThat(nestedObject.jsonNodes()[1].identifier()).isEqualTo("age");
+        assertThat(nestedObject.jsonNodes()[1].content()).isEqualTo(36);
+    }
+
+    @Test
+    void simpleJsonWith2NestedObject() {
+        var result = JsonObjectParser.parse("""
+                {
+                  "person1": {
+                    "name": "Laurens",
+                    "age": 36
+                  },
+                  "person2": {
+                    "name": "Andreas",
+                    "age": 32
+                  }
+                }""");
+
+        assertThat(result).isNotNull();
+        assertThat(result.jsonNodes().length).isEqualTo(2);
+        assertThat(result.jsonNodes()[0].identifier()).isEqualTo("person1");
+        assertThat(result.jsonNodes()[0].content()).isInstanceOf(JsonObject.class);
+        assertThat(result.jsonNodes()[1].identifier()).isEqualTo("person2");
+        assertThat(result.jsonNodes()[1].content()).isInstanceOf(JsonObject.class);
+
+        var nestedObject1 = (JsonObject) result.jsonNodes()[0].content();
+        assertThat(nestedObject1.jsonNodes()[0].identifier()).isEqualTo("name");
+        assertThat(nestedObject1.jsonNodes()[0].content()).isEqualTo("Laurens");
+        assertThat(nestedObject1.jsonNodes()[1].identifier()).isEqualTo("age");
+        assertThat(nestedObject1.jsonNodes()[1].content()).isEqualTo(36);
+        var nestedObject2 = (JsonObject) result.jsonNodes()[1].content();
+        assertThat(nestedObject2.jsonNodes()[0].identifier()).isEqualTo("name");
+        assertThat(nestedObject2.jsonNodes()[0].content()).isEqualTo("Andreas");
+        assertThat(nestedObject2.jsonNodes()[1].identifier()).isEqualTo("age");
+        assertThat(nestedObject2.jsonNodes()[1].content()).isEqualTo(32);
+    }
+
+    @Test
+    void jsonWith1NestedObjectContaining1NestedObject() {
+        var result = JsonObjectParser.parse("""
+                {
+                  "person1": {
+                    "name": "Laurens",
+                    "age": 36,
+                    "person2": {
+                        "name": "Andreas",
+                        "age": 32
+                    }
+                  }
+                }""");
+
+        assertThat(result).isNotNull();
+        assertThat(result.jsonNodes().length).isEqualTo(1);
+        assertThat(result.jsonNodes()[0].identifier()).isEqualTo("person1");
+        assertThat(result.jsonNodes()[0].content()).isInstanceOf(JsonObject.class);
+
+        var nestedObject1 = (JsonObject) result.jsonNodes()[0].content();
+        assertThat(nestedObject1.jsonNodes().length).isEqualTo(3);
+        assertThat(nestedObject1.jsonNodes()[0].identifier()).isEqualTo("name");
+        assertThat(nestedObject1.jsonNodes()[0].content()).isEqualTo("Laurens");
+        assertThat(nestedObject1.jsonNodes()[1].identifier()).isEqualTo("age");
+        assertThat(nestedObject1.jsonNodes()[1].content()).isEqualTo(36);
+        assertThat(nestedObject1.jsonNodes()[2].identifier()).isEqualTo("person2");
+
+        var nestedObject2 = (JsonObject) nestedObject1.jsonNodes()[2].content();
+        assertThat(nestedObject2.jsonNodes()[0].identifier()).isEqualTo("name");
+        assertThat(nestedObject2.jsonNodes()[0].content()).isEqualTo("Andreas");
+        assertThat(nestedObject2.jsonNodes()[1].identifier()).isEqualTo("age");
+        assertThat(nestedObject2.jsonNodes()[1].content()).isEqualTo(32);
+    }
+
+    @Test
     void anArrayFieldWithEmptyArray() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "children": []
                 }""");
@@ -104,7 +213,7 @@ class JsonParserTest {
 
     @Test
     void anArrayFieldWithObjectArray() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "children": [       {
                   "name": "Laurens",
@@ -128,7 +237,7 @@ class JsonParserTest {
 
     @Test
     void anArrayFieldWithAMixedArray() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "children": [1, true, "hello", -2, -3.86, false, "world",   
                 {
@@ -164,9 +273,8 @@ class JsonParserTest {
     }
 
     @Test
-    @Disabled
     void anArrayFieldWithEmptyArrays() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "children": [[],[],[]]
                 }""");
@@ -174,12 +282,16 @@ class JsonParserTest {
         assertThat(result).isNotNull();
         assertThat(result.jsonNodes().length).isEqualTo(1);
         assertThat(result.jsonNodes()[0].identifier()).isEqualTo("children");
-        assertThat(result.jsonNodes()[0].content()).isEqualTo(Collections.emptyList());
+        assertThat(result.jsonNodes()[0].content()).isEqualTo(
+                List.of(
+                        Collections.emptyList(),
+                        Collections.emptyList(),
+                        Collections.emptyList()));
     }
 
     @Test
     void aStringArrayField() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "children": ["Anthony", "Marvin"]
                 }""");
@@ -192,11 +304,10 @@ class JsonParserTest {
 
     @Test
     void aNumberArrayFieldOfIntegers() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "ages": [12, 9]
                 }""");
-
 
         assertThat(result).isNotNull();
         assertThat(result.jsonNodes().length).isEqualTo(1);
@@ -206,7 +317,7 @@ class JsonParserTest {
 
     @Test
     void aNumberArrayFieldOfDoubles() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "weights": [12.99, 9.87]
                 }""");
@@ -219,125 +330,14 @@ class JsonParserTest {
 
     @Test
     void aBooleanArrayField() {
-        var result = JsonParser.parse("""
+        var result = JsonObjectParser.parse("""
                 {
                   "bools": [true, false, true]
                 }""");
-
 
         assertThat(result).isNotNull();
         assertThat(result.jsonNodes().length).isEqualTo(1);
         assertThat(result.jsonNodes()[0].identifier()).isEqualTo("bools");
         assertThat(result.jsonNodes()[0].content()).isEqualTo(List.of(true, false, true));
-    }
-
-    @Test
-    void fourFieldsOfDifferentTypes() {
-        var result = JsonParser.parse("""
-                {
-                  "name": "Laurens",
-                  "age": 36,
-                  "children": ["Anthony", "Marvin"],
-                  "married": true
-                }""");
-        assertThat(result).isNotNull();
-        assertThat(result.jsonNodes().length).isEqualTo(4);
-        assertThat(result.jsonNodes()[0].identifier()).isEqualTo("name");
-        assertThat(result.jsonNodes()[0].content()).isEqualTo("Laurens");
-        assertThat(result.jsonNodes()[1].identifier()).isEqualTo("age");
-        assertThat(result.jsonNodes()[1].content()).isEqualTo(36);
-        assertThat(result.jsonNodes()[2].identifier()).isEqualTo("children");
-        assertThat(result.jsonNodes()[2].content()).isEqualTo(List.of("Anthony", "Marvin"));
-        assertThat(result.jsonNodes()[3].identifier()).isEqualTo("married");
-        assertThat(result.jsonNodes()[3].content()).isEqualTo(true);
-    }
-
-    @Test
-    void simpleJsonWith1NestedObject() {
-        var result = JsonParser.parse("""
-                {
-                  "person": {
-                    "name": "Laurens",
-                    "age": 36
-                  }
-                }""");
-
-        assertThat(result).isNotNull();
-        assertThat(result.jsonNodes().length).isEqualTo(1);
-        assertThat(result.jsonNodes()[0].identifier()).isEqualTo("person");
-        assertThat(result.jsonNodes()[0].content()).isInstanceOf(JsonObject.class);
-
-        var nestedObject = (JsonObject) result.jsonNodes()[0].content();
-        assertThat(nestedObject.jsonNodes()[0].identifier()).isEqualTo("name");
-        assertThat(nestedObject.jsonNodes()[0].content()).isEqualTo("Laurens");
-        assertThat(nestedObject.jsonNodes()[1].identifier()).isEqualTo("age");
-        assertThat(nestedObject.jsonNodes()[1].content()).isEqualTo(36);
-    }
-
-    @Test
-    void simpleJsonWith2NestedObject() {
-        var result = JsonParser.parse("""
-                {
-                  "person1": {
-                    "name": "Laurens",
-                    "age": 36
-                  },
-                  "person2": {
-                    "name": "Andreas",
-                    "age": 32
-                  }
-                }""");
-
-        assertThat(result).isNotNull();
-        assertThat(result.jsonNodes().length).isEqualTo(2);
-        assertThat(result.jsonNodes()[0].identifier()).isEqualTo("person1");
-        assertThat(result.jsonNodes()[0].content()).isInstanceOf(JsonObject.class);
-        assertThat(result.jsonNodes()[1].identifier()).isEqualTo("person2");
-        assertThat(result.jsonNodes()[1].content()).isInstanceOf(JsonObject.class);
-
-        var nestedObject1 = (JsonObject) result.jsonNodes()[0].content();
-        assertThat(nestedObject1.jsonNodes()[0].identifier()).isEqualTo("name");
-        assertThat(nestedObject1.jsonNodes()[0].content()).isEqualTo("Laurens");
-        assertThat(nestedObject1.jsonNodes()[1].identifier()).isEqualTo("age");
-        assertThat(nestedObject1.jsonNodes()[1].content()).isEqualTo(36);
-        var nestedObject2 = (JsonObject) result.jsonNodes()[1].content();
-        assertThat(nestedObject2.jsonNodes()[0].identifier()).isEqualTo("name");
-        assertThat(nestedObject2.jsonNodes()[0].content()).isEqualTo("Andreas");
-        assertThat(nestedObject2.jsonNodes()[1].identifier()).isEqualTo("age");
-        assertThat(nestedObject2.jsonNodes()[1].content()).isEqualTo(32);
-    }
-
-    @Test
-    void jsonWith1NestedObjectContaining1NestedObject() {
-        var result = JsonParser.parse("""
-                {
-                  "person1": {
-                    "name": "Laurens",
-                    "age": 36,
-                    "person2": {
-                        "name": "Andreas",
-                        "age": 32
-                    }
-                  }
-                }""");
-
-        assertThat(result).isNotNull();
-        assertThat(result.jsonNodes().length).isEqualTo(1);
-        assertThat(result.jsonNodes()[0].identifier()).isEqualTo("person1");
-        assertThat(result.jsonNodes()[0].content()).isInstanceOf(JsonObject.class);
-
-        var nestedObject1 = (JsonObject) result.jsonNodes()[0].content();
-        assertThat(nestedObject1.jsonNodes().length).isEqualTo(3);
-        assertThat(nestedObject1.jsonNodes()[0].identifier()).isEqualTo("name");
-        assertThat(nestedObject1.jsonNodes()[0].content()).isEqualTo("Laurens");
-        assertThat(nestedObject1.jsonNodes()[1].identifier()).isEqualTo("age");
-        assertThat(nestedObject1.jsonNodes()[1].content()).isEqualTo(36);
-        assertThat(nestedObject1.jsonNodes()[2].identifier()).isEqualTo("person2");
-
-        var nestedObject2 = (JsonObject) nestedObject1.jsonNodes()[2].content();
-        assertThat(nestedObject2.jsonNodes()[0].identifier()).isEqualTo("name");
-        assertThat(nestedObject2.jsonNodes()[0].content()).isEqualTo("Andreas");
-        assertThat(nestedObject2.jsonNodes()[1].identifier()).isEqualTo("age");
-        assertThat(nestedObject2.jsonNodes()[1].content()).isEqualTo(32);
     }
 }
